route_table.tf
# To take the control over the resources route table needs to be created else we can use the default mentioned below as well.
# The default route table don't need association everything done by the below code.  
/*
resource "aws_default_route_table" "default" {
  default_route_table_id = aws_vpc.main.default_route_table_id

  route {
    cidr_block           = "0.0.0.0/0"
    gateway_id           = aws_internet_gateway.igw.id
  }
}
*/

resource "aws_route_table" "route_table" {
  vpc_id                 = aws_vpc.main.id

  route {
    cidr_block           = "0.0.0.0/0"
    gateway_id           = aws_internet_gateway.igw.id
  }

  tags                   = {
    Name                 = "Route table"
  }
}
